// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketSubmitButtons component should not render confirm popover 1`] = `
<div
  className="buttons"
  id="submit-button-div"
>
  <ForwardRef
    className="mr-2"
    id="submit-button"
    isDisabled={false}
    isLoading={false}
    onClick={[Function]}
    tabIndex={5}
    type="submit"
  >
    Send
  </ForwardRef>
  <Tooltip
    offset="0, 4px"
    placement="top"
    target="submit-button"
  >
    Ctrl + Enter
  </Tooltip>
  <ForwardRef
    id="submit-and-close-button"
    intent="secondary"
    isDisabled={false}
    isLoading={false}
    onClick={[Function]}
    type="submit"
  >
    Send
     & Close
  </ForwardRef>
  <Tooltip
    offset="0, 4px"
    placement="top"
    target="submit-and-close-button"
  >
    Ctrl + Shift + Enter
  </Tooltip>
</div>
`;

exports[`TicketSubmitButtons component should render buttons with a filled ticket 1`] = `
<div
  className="component d-flex align-items-center justify-content-between"
>
  <div
    className="buttons"
    id="submit-button-div"
  >
    <ConfirmButton
      className="mr-2"
      confirmationContent="Are you sure you want to create a ticket with no subject?"
      id="submit-button"
      isDisabled={false}
      isLoading={false}
      onConfirm={[Function]}
      tabIndex={5}
      type="submit"
    >
      Send
    </ConfirmButton>
    <Tooltip
      offset="0, 4px"
      placement="top"
      target="submit-button"
    >
      Ctrl + Enter
    </Tooltip>
    <ConfirmButton
      confirmationContent="Are you sure you want to create a ticket with no subject?"
      id="submit-and-close-button"
      intent="secondary"
      isDisabled={false}
      isLoading={false}
      onConfirm={[Function]}
      type="submit"
    >
      Send
       & Close
    </ConfirmButton>
    <Tooltip
      offset="0, 4px"
      placement="top"
      target="submit-and-close-button"
    >
      Ctrl + Shift + Enter
    </Tooltip>
  </div>
  <small
    className="tip text-faded d-none d-md-inline-block"
  >
    <i
      className="material-icons md-1 mr-1 align-text-bottom"
    >
      info
    </i>
    <span>
      Press 
      <kbd>
        →
      </kbd>
       (right arrow) to go to next ticket
    </span>
    <i
      className="material-icons md-1 cursor-pointer ml-1 mr-1 align-text-bottom"
      id="hide-helpers-button"
      onClick={[Function]}
    >
      close
    </i>
    <Tooltip
      placement="top"
      target="hide-helpers-button"
    >
      Permanently hide tips
    </Tooltip>
  </small>
</div>
`;

exports[`TicketSubmitButtons component should render buttons with an Inactive account 1`] = `
<div
  className="buttons"
  id="submit-button-div"
>
  <ConfirmButton
    className="mr-2"
    confirmationContent="Are you sure you want to create a ticket with no subject?"
    id="submit-button"
    isDisabled={true}
    isLoading={false}
    onConfirm={[Function]}
    tabIndex={5}
    type="submit"
  >
    Send
  </ConfirmButton>
  <ConfirmButton
    confirmationContent="Are you sure you want to create a ticket with no subject?"
    id="submit-and-close-button"
    intent="secondary"
    isDisabled={true}
    isLoading={false}
    onConfirm={[Function]}
    type="submit"
  >
    Send
     & Close
  </ConfirmButton>
</div>
`;

exports[`TicketSubmitButtons component should render buttons with an empty ticket 1`] = `
<div
  className="buttons"
  id="submit-button-div"
>
  <ConfirmButton
    className="mr-2"
    confirmationContent="Are you sure you want to create a ticket with no subject?"
    id="submit-button"
    isDisabled={true}
    isLoading={false}
    onConfirm={[Function]}
    tabIndex={5}
    type="submit"
  >
    Send
  </ConfirmButton>
  <ConfirmButton
    confirmationContent="Are you sure you want to create a ticket with no subject?"
    id="submit-and-close-button"
    intent="secondary"
    isDisabled={true}
    isLoading={false}
    onConfirm={[Function]}
    type="submit"
  >
    Send
     & Close
  </ConfirmButton>
</div>
`;

exports[`TicketSubmitButtons component should render buttons with no recipent and public 1`] = `
<div
  className="buttons"
  id="submit-button-div"
>
  <ConfirmButton
    className="mr-2"
    confirmationContent="Are you sure you want to create a ticket with no subject?"
    id="submit-button"
    isDisabled={true}
    isLoading={false}
    onConfirm={[Function]}
    tabIndex={5}
    type="submit"
  >
    Send
  </ConfirmButton>
  <ConfirmButton
    confirmationContent="Are you sure you want to create a ticket with no subject?"
    id="submit-and-close-button"
    intent="secondary"
    isDisabled={true}
    isLoading={false}
    onConfirm={[Function]}
    type="submit"
  >
    Send
     & Close
  </ConfirmButton>
</div>
`;

exports[`TicketSubmitButtons component should render buttons with only macro applied 1`] = `
<div
  className="buttons"
  id="submit-button-div"
>
  <ConfirmButton
    className="mr-2"
    confirmationContent="Are you sure you want to create a ticket with no subject?"
    id="submit-button"
    isDisabled={false}
    isLoading={false}
    onConfirm={[Function]}
    tabIndex={5}
    type="submit"
  >
    Apply Macro
  </ConfirmButton>
  <Tooltip
    offset="0, 4px"
    placement="top"
    target="submit-button"
  >
    Ctrl + Enter
  </Tooltip>
  <ConfirmButton
    confirmationContent="Are you sure you want to create a ticket with no subject?"
    id="submit-and-close-button"
    intent="secondary"
    isDisabled={false}
    isLoading={false}
    onConfirm={[Function]}
    type="submit"
  >
    Apply Macro
     & Close
  </ConfirmButton>
  <Tooltip
    offset="0, 4px"
    placement="top"
    target="submit-and-close-button"
  >
    Ctrl + Shift + Enter
  </Tooltip>
</div>
`;

exports[`TicketSubmitButtons component should render buttons with only macro applied but only setResponseText && addAttachements 1`] = `
<div
  className="buttons"
  id="submit-button-div"
>
  <ConfirmButton
    className="mr-2"
    confirmationContent="Are you sure you want to create a ticket with no subject?"
    id="submit-button"
    isDisabled={true}
    isLoading={false}
    onConfirm={[Function]}
    tabIndex={5}
    type="submit"
  >
    Send
  </ConfirmButton>
  <ConfirmButton
    confirmationContent="Are you sure you want to create a ticket with no subject?"
    id="submit-and-close-button"
    intent="secondary"
    isDisabled={true}
    isLoading={false}
    onConfirm={[Function]}
    type="submit"
  >
    Send
     & Close
  </ConfirmButton>
</div>
`;

exports[`TicketSubmitButtons component should render buttons with ticket content & macro applied 1`] = `
<div
  className="buttons"
  id="submit-button-div"
>
  <ConfirmButton
    className="mr-2"
    confirmationContent="Are you sure you want to create a ticket with no subject?"
    id="submit-button"
    isDisabled={false}
    isLoading={false}
    onConfirm={[Function]}
    tabIndex={5}
    type="submit"
  >
    Send
  </ConfirmButton>
  <Tooltip
    offset="0, 4px"
    placement="top"
    target="submit-button"
  >
    Ctrl + Enter
  </Tooltip>
  <ConfirmButton
    confirmationContent="Are you sure you want to create a ticket with no subject?"
    id="submit-and-close-button"
    intent="secondary"
    isDisabled={false}
    isLoading={false}
    onConfirm={[Function]}
    type="submit"
  >
    Send
     & Close
  </ConfirmButton>
  <Tooltip
    offset="0, 4px"
    placement="top"
    target="submit-and-close-button"
  >
    Ctrl + Shift + Enter
  </Tooltip>
</div>
`;
